# amaranth-orchard

./: .coverage  .env  .gitignore  .gitmodules  LICENSE.txt  README.md  hyperram.gtkw  hyperram.vcd  i2c_assertion_cov.json  i2c_block_cov.json  i2c_expression_cov.json  i2c_read_test.gtkw  i2c_read_test.vcd  i2c_start_test.gtkw  i2c_start_test.vcd  i2c_statement_cov.json  i2c_write_test.gtkw  i2c_write_test.vcd  pyproject.toml  setup.py  smoke_test.gtkw  smoke_test.vcd  spi_cs_test.gtkw  spi_cs_test.vcd  spi_div_test.gtkw  spi_div_test.vcd  spi_xfer_test.gtkw  spi_xfer_test.vcd  statement_coverage.vcd  test.gtkw  test.vcd  test_output.vcd  test_qspi.vcd  test_uart.vcd
.github/actions/multirepo/: action.yml
.github/workflows/: main.yaml
amaranth/sim/: _coverage.py
amaranth_orchard/: __init__.py
amaranth_orchard/base/: __init__.py  field.py  gpio.py  peripheral.py  platform_timer.py  soc_id.py
amaranth_orchard/io/: __init__.py  glasgow_iostream.py  gpio.py  i2c.py  rfc_uart.py  spi.py  uart.py
amaranth_orchard/io/models/: uart.cc
amaranth_orchard/memory/: __init__.py  glasgow_qspi.py  hyperram.py  qspi_flash.py  spimemio.py  sram.py
amaranth_orchard/models/: log.cc  log.h  uart.cc
amaranth_orchard/software/: __init__.py  soft_gen.py
amaranth_orchard/software/drivers/: uart.c  uart.h
chipflow_digital_ip/: __init__.py
chipflow_digital_ip/base/: __init__.py  _platform_timer.py  _soc_id.py  coverage.py  gptimer.py
chipflow_digital_ip/io/: __init__.py  _glasgow_i2c.py  _gpio.py  _i2c.py  _rfc_uart.py  _spi.py  _uart.py  gpio.py  i2c.py  spi.py  uart.py
chipflow_digital_ip/memory/: __init__.py  _glasgow_qspi.py  _hyperram.py  _qspi_flash.py  _sram.py  glasgow_qspi.py  hyperram.py  qspi_flash.py
chipflow_digital_ip/processors/: __init__.py
chipflow_digital_ip/processors/_openhw/: README.md  convert_cv32e40p_sv2v.sh  convert_dm_wrap_sv2v.sh  cv32e40p.py
chipflow_digital_ip/processors/_openhw/harness/: dm_wrap.sv  dummy_clock_gate.v
chipflow_digital_ip/processors/_openhw/verilog/: cv32e40p_conv_sv2v.v  dm_wrap_conv_sv2v.v
chipflow_digital_ip/processors/openhwgroup/: __init__.py  _cv32e40p.py  convert_cv32e40p_sv2v.sh  convert_dm_wrap_sv2v.sh
chipflow_digital_ip/processors/openhwgroup/verilog/: cv32e40p_conv_sv2v.v
tests/: test.gtkw  test.vcd  test_gpio.py  test_gptimer.py  test_hyperram.py  test_i2c.py  test_models.py  test_qspi.py  test_spi.py  test_uart.py  test_uart_integration.py  test_utils.py
tools/: export_ips.py  gen_overrides.py  license_check.sh
