# Project metadata

[project]
name = "chipflow-digital-ip"
dynamic = ["version"]
description = "curated collection of Amaranth cores"
authors = [
    {name = "Myrtle Shah", email = "gatecat@ds0.me" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "BSD-2-Clause AND 0BSD AND Apache-2.0 AND SHL-0.51"
license-files = [
    "LICENSE*",
    "vendor/*/*/LICEN?E*",
    "vendor/*/*/COPYRIGHT*",
]

requires-python = ">=3.11"
dependencies = [
    "amaranth>=0.5,<0.6",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["**/*.py", "**/*.v", "**/*.yaml"]

# Development workflow configuration

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false

[tool.ruff.lint]
ignore = ['F403', 'F405', 'F841']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=chipflow-digital-ip cov-report=term"
test-cov-html.cmd = "pytest --cov=chipflow-digital-ip --cov-report=html"
# test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
test-docs.cmd = "true"
lint.cmd = "ruff check"
#docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
doc.cmd = "true"
export-ips.cmd = "./tools/export_ips.py"
update-licenses = "./tools/add-license.py"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
]
